# user-permission-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/user-permission-python/: Cargo.toml
crates/user-permission-python/src/: database.rs  group.rs  lib.rs  service_client.rs  token.rs  user.rs
python/user_permission/: __init__.py  __init__.pyi
tests/python/: test_user_permission.py
