[workspace]
resolver = "2"
members = [
    "crates/user-permission-python",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["mokuichi147 <38586357+Mokuichi147@users.noreply.github.com>"]
repository = "https://github.com/mokuichi147/user-permission-py"
homepage = "https://github.com/mokuichi147/user-permission-py"

[workspace.dependencies]
# Rust 実装は別リポジトリ (mokuichi147/user-permission) に分離済み。crates.io から取得する。
user-permission-core = "0.3"
user-permission = "0.3"

tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "net"] }
axum = "0.7"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
jsonwebtoken = "9"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
